--- a/index.html
+++ b/index.html
@@ -57,14 +57,13 @@
                     <div class="neon_logo_nav">
                       <b><span>C</span><span>A</span>R<span>O</span>L<span></span>I<span></span>N<span></span>E<span></span>D<span></span>I<span></span>N<span></span>E<span></span>R<span></span></b>
                     </div>
-                    <!-- <div class="neon_sns"><a href=""><img src="/image/sns/instagram.png"></a></div> -->
+                    <!-- <div class="neon_sns"><a href=""><img src="image/sns/instagram.png"></a></div> -->
                     <ul>
-                      <li class="red"><a href="#">TOP</a></li>
-                      <li class="red"><a href="#">FOOD MENU</a></li>
-                      <li class="red"><a href="#">ITEMS</a></li>
-                      <li class="red"><a href="#">ACCESS</a></li>
-                      <li class="red"><a href="#">INSTAGRAM</a></li>
-                      <li class="red"><a href="#">ACCESS</a></li>
+                      <li class="red"><a href="#menu01">TOP</a></li>
+                      <li class="red"><a href="#menu02">FOOD MENU</a></li>
+                      <li class="red"><a href="#menu03">ITEMS</a></li>
+                      <li class="red"><a href="#menu04">ACCESS</a></li>
+                      <li class="red"><a href="#menu05">INSTAGRAM</a></li>
                     </ul>
                   </div>
                 </nav>
@@ -77,13 +76,13 @@
 
       <main>
         <div class="main_contents">
-          <div class="main_visual">
+          <div class="main_visual" id="menu01">
             <div class="main_visual_wrapper">
               <nav id="g-nav">
                 <div class="openbtn2"><span></span><span></span><span></span></div>
               </nav>
               <div class="main_visual_logo">
-                <img src="/image/logo.png">
+                <img src="image/logo.png">
               </div>
               <div class="main_visual_title">
                 <h2>CAROLINE DINER</h2>
@@ -91,17 +90,19 @@
             </div>
           </div>
 
-
-          <div class="infomation">
+          <!-- ニュース枠 -->
+          <!-- <div class="infomation">
             <div class="infomation_wrapper">
               <div class="infomation_title">
                 <h2>-What's CAROLINE DINER-</h2>
               </div>
               <div class="infomation_content"></div>
             </div>
-          </div>
+          </div> -->
+
+
           <div class="side_padding">
-            <div class="food_menu">
+            <div class="food_menu" id="menu02">
               <div class="food_menu_wrapper">
                 <div class="food_menu_title">
                   <h2>-FOOD MENU-</h2>
@@ -110,14 +111,14 @@
                   <div class="food_menu_content">
                     <div class="food_content">
                       <div class="food_menu_items_wrapper">
-                        <div class="food_menu_img"><a href=""><img src="/image/eat1.jpg"></a></div>
+                        <div class="food_menu_img"><a href=""><img src="image/eat1.jpg"></a></div>
                         <div class="food_menu_meta">
-                          <p class="food_menu_span">GARLIC SHRIMP</p>
-                          <p class="food_menu_items_title">ガーリックシュリンプ</p>
-                          <p class="food_menu_price">¥980</p>
+                          <p class="food_menu_span">HAMBURGER</p>
+                          <p class="food_menu_items_title">キャロラインバーガー</p>
+                          <p class="food_menu_price">¥1200</p>
                         </div>
                         <div class="food_menu_description">
-                          <p>ハワイでも人気No.1フードのガーリックシュリンプ。<br>現地の味を再現しました。</p>
+                          <p>お店人気No.1の定番、キャロラインバーガー!</p>
                         </div>
                       </div>
                     </div>
@@ -126,14 +127,14 @@
                   <div class="food_menu_content">
                     <div class="food_content">
                       <div class="food_menu_items_wrapper">
-                        <div class="food_menu_img"><img src="/image/eat2.jpg"></div>
+                        <div class="food_menu_img"><img src="image/eat2.jpg"></div>
                         <div class="food_menu_meta">
-                          <p class="food_menu_span">GARLIC SHRIMP</p>
-                          <p class="food_menu_items_title">ガーリックシュリンプ</p>
+                          <p class="food_menu_span">VINE ME</p>
+                          <p class="food_menu_items_title">バインミー</p>
                           <p class="food_menu_price">¥980</p>
                         </div>
                         <div class="food_menu_description">
-                          <p>ハワイでも人気No.1フードのガーリックシュリンプ。<br>現地の味を再現しました。</p>
+                          <p>表面が香ばしくパリッと焼けており、中はふんわりしっとり。<br>牛バラ肉はステーキのような厚みがある。</p>
                         </div>
                       </div>
                     </div>
@@ -142,14 +143,14 @@
                   <div class="food_menu_content">
                     <div class="food_content">
                       <div class="food_menu_items_wrapper">
-                        <div class="food_menu_img"><img src="/image/eat3.jpg"></div>
+                        <div class="food_menu_img"><img src="image/eat3.jpg"></div>
                         <div class="food_menu_meta">
-                          <p class="food_menu_span">GARLIC SHRIMP</p>
-                          <p class="food_menu_items_title">ガーリックシュリンプ</p>
-                          <p class="food_menu_price">¥980</p>
+                          <p class="food_menu_span">TORTILLA</p>
+                          <p class="food_menu_items_title">トルティーア</p>
+                          <p class="food_menu_price">¥1080</p>
                         </div>
                         <div class="food_menu_description">
-                          <p>ハワイでも人気No.1フードのガーリックシュリンプ。<br>現地の味を再現しました。</p>
+                          <p>オリジナルスパイスで調理したお肉に野菜を合わせて<br>メキシコ伝統のおいしさ。</p>
                         </div>
                       </div>
                     </div>
@@ -160,7 +161,7 @@
                 <div class="food_menu_content">
                   <div class="food_content">
                     <div class="food_menu_items_wrapper">
-                      <div class="food_menu_img"><img src="/image/eat3.jpg"></div>
+                      <div class="food_menu_img"><img src="image/eat3.jpg"></div>
                       <div class="food_menu_meta">
                         <p class="food_menu_span">GARLIC SHRIMP</p>
                         <p class="food_menu_items_title">ガーリックシュリンプ</p>
@@ -176,7 +177,7 @@
                 <div class="food_menu_content">
                   <div class="food_content">
                     <div class="food_menu_items_wrapper">
-                      <div class="food_menu_img"><img src="/image/eat2.jpg"></div>
+                      <div class="food_menu_img"><img src="image/eat2.jpg"></div>
                       <div class="food_menu_meta">
                         <p class="food_menu_span">GARLIC SHRIMP</p>
                         <p class="food_menu_items_title">ガーリックシュリンプ</p>
@@ -192,7 +193,7 @@
                 <div class="food_menu_content">
                   <div class="food_content">
                     <div class="food_menu_items_wrapper">
-                      <div class="food_menu_img"><img src="/image/eat1.jpg"></div>
+                      <div class="food_menu_img"><img src="image/eat1.jpg"></div>
                       <div class="food_menu_meta">
                         <p class="food_menu_span">GARLIC SHRIMP</p>
                         <p class="food_menu_items_title">ガーリックシュリンプ</p>
@@ -336,32 +337,32 @@
 
 
 
-                <div class="items">
+                <div class="items" id="menu03">
                   <div class="items_all_wrapper">
                     <div class="items_title">
                       <h2>-ITEMS-</h2>
                     </div>
                     <div class="items_content">
                       <div class="items_wrapper" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
-                        <div class="items_img"><img src="/image/item1.jpg">
+                        <div class="items_img"><img src="image/item1.jpg">
                           <div>スウェットトレーナー8.0oz</div>
                           <!-- <p>スウェットトレーナー8.0oz</p> -->
                         </div>
                       </div>
                       <div class="items_wrapper" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
-                        <div class="items_img"><img src="/image/item2.jpg">
+                        <div class="items_img"><img src="image/item2.jpg">
                           <div>スウェットトレーナー8.0oz</div>
                           <!-- <p>スウェットトレーナー8.0oz</p> -->
                         </div>
                       </div>
                       <div class="items_wrapper" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
-                        <div class="items_img"><img src="/image/item3.jpg">
+                        <div class="items_img"><img src="image/item3.jpg">
                           <div>スウェットトレーナー8.0oz</div>
                           <!-- <p>スウェットトレーナー8.0oz</p> -->
                         </div>
                       </div>
                       <div class="items_wrapper" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
-                        <div class="items_img"><img src="/image/item2.jpg">
+                        <div class="items_img"><img src="image/item2.jpg">
                           <div>スウェットトレーナー8.0oz</div>
                           <!-- <p>スウェットトレーナー8.0oz</p> -->
                         </div>
@@ -369,25 +370,25 @@
                     </div>
                     <div class="items_content" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
                       <div class="items_wrapper">
-                        <div class="items_img"><img src="/image/item4.jpg">
+                        <div class="items_img"><img src="image/item4.jpg">
                           <div>スウェットトレーナー8.0oz</div>
                           <!-- <p>スウェットトレーナー8.0oz</p> -->
                         </div>
                       </div>
                       <div class="items_wrapper" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
-                        <div class="items_img"><img src="/image/item5.jpg">
+                        <div class="items_img"><img src="image/item5.jpg">
                           <div>スウェットトレーナー8.0oz</div>
                           <!-- <p>スウェットトレーナー8.0oz</p> -->
                         </div>
                       </div>
                       <div class="items_wrapper" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
-                        <div class="items_img"><img src="/image/item2.jpg">
+                        <div class="items_img"><img src="image/item2.jpg">
                           <div>スウェットトレーナー8.0oz</div>
                           <!-- <p>スウェットトレーナー8.0oz</p> -->
                         </div>
                       </div>
                       <div class="items_wrapper" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
-                        <div class="items_img"><img src="/image/item2.jpg">
+                        <div class="items_img"><img src="image/item2.jpg">
                           <div>スウェットトレーナー8.0oz</div>
                           <!-- <p>スウェットトレーナー8.0oz</p> -->
                         </div>
@@ -440,15 +441,15 @@
                 <div class="gallery">
                   <div class="gallery_wrap">
                     <ul class="slide">
-                      <li><img src="/image/img_01.jpg" alt=""></li>
-                      <li><img src="/image/img_02.jpg" alt=""></li>
-                      <li><img src="/image/img_03.jpg" alt=""></li>
-                      <li><img src="/image/img_04.jpg" alt=""></li>
+                      <li><img src="image/img_01.jpg" alt=""></li>
+                      <li><img src="image/img_02.jpg" alt=""></li>
+                      <li><img src="image/img_03.jpg" alt=""></li>
+                      <li><img src="image/img_04.jpg" alt=""></li>
                     </ul>
                   </div>
                 </div>
 
-                <div class="instagram">
+                <div class="instagram" id="menu04">
                   <div class="instagram_wrapper">
                     <div class="instagram_title">
                       <h2>-INSTAGRAM-</h2>
@@ -486,14 +487,18 @@
                   </div>
                   <a href="https://twitter.com/nodws" id="btn-twtr" target="_b">Follow me on Twitter</a>
                   <div class="neon_sns">
-                    <a href=""><img src="/image/sns/instagram.png"></a>
-                    <a href=""><img src="/image/sns/twitter.png"></a>
-                    <a href=""><img src="/image/sns/youtube.png"></a>
+                    <a href=""><img src="image/sns/instagram.png"></a>
+                    <a href=""><img src="image/sns/twitter.png"></a>
+                    <a href=""><img src="image/sns/youtube.png"></a>
                   </div>
                 </div> -->
 
 
-                <div class="footer"></div>
+                <div class="footer">
+
+                  <div><p>&copy;<script>document.write(new Date().getFullYear());</script>CAROLINEDINER</p></div>
+
+                </div>
 
               </div>
       </main>
@@ -553,15 +558,26 @@
 
   <script>
     $(".openbtn2").click(function () { //ボタンがクリックされたら
-      $(this).toggleClass('active'); //ボタン自身に activeクラスを付与し
-      $("#g-nav").toggleClass('panelactive'); //ナビゲーションにpanelactiveクラスを付与
+      $("body").toggleClass('fixed'); //ナビゲーションにpanelactiveクラスを付与
     });
 
     $("#g-nav a").click(function () { //ナビゲーションのリンクがクリックされたら
-      $(".openbtn2").removeClass('active'); //ボタンの activeクラスを除去し
-      $("#g-nav").removeClass('panelactive'); //ナビゲーションのpanelactiveクラスも除去
+      $("body").removeClass('fixed'); //ナビゲーションのpanelactiveクラスも除去
     });
   </script>
+
+<!-- ハンバーガーメニュー開いているとき、背景固定 -->
+<script>
+  $(".openbtn2").click(function () { //ボタンがクリックされたら
+    $(this).toggleClass('active'); //ボタン自身に activeクラスを付与し
+    $("#g-nav").toggleClass('panelactive'); //ナビゲーションにpanelactiveクラスを付与
+  });
+
+  $("#g-nav a").click(function () { //ナビゲーションのリンクがクリックされたら
+    $(".openbtn2").removeClass('active'); //ボタンの activeクラスを除去し
+    $("#g-nav").removeClass('panelactive'); //ナビゲーションのpanelactiveクラスも除去
+  });
+</script>
 
 
   <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
