--- a/index.html
+++ b/index.html
@@ -607,6 +607,10 @@
     AOS.init();
   </script>
 
+  <script>
+  //jQueryを使うなら
+    $('.main_visual').css('height',$(window).height());</script>
+
 </body>
 
 
