--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                   </div>
                 </div>
 
-                <div class="access">
+                <div class="access" id="menu04">
                   <div class="access_title">
                     <h2>-ACCESS-</h2>
                   </div>
@@ -449,7 +449,7 @@
                   </div>
                 </div>
 
-                <div class="instagram" id="menu04">
+                <div class="instagram" id="menu05">
                   <div class="instagram_wrapper">
                     <div class="instagram_title">
                       <h2>-INSTAGRAM-</h2>
