--- a/index.html
+++ b/index.html
@@ -81,12 +81,14 @@
               <nav id="g-nav">
                 <div class="openbtn2"><span></span><span></span><span></span></div>
               </nav>
+              <div class="logo_title">
               <div class="main_visual_logo">
                 <img src="image/logo.png">
               </div>
               <div class="main_visual_title">
                 <h2>CAROLINE DINER</h2>
               </div>
+            </div>
             </div>
           </div>
 
